...
import UIKit

final class CommentViewController: UIViewController {
    
    private let table: UITableView = {
        let table = UITableView(frame: .zero)
        table.accessibilityIdentifier = "comment_table"
        return table
    }()

    var postId: Int?
    private let cellIdentifier = "Cell"
    private var commentItems: [CommentItemResponse] = []
...
    }
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: cellIdentifier, for: indexPath) as UITableViewCell
        cell.setUp(item: commentItems[indexPath.row])
        cell.selectionStyle = .none
        cell.accessibilityIdentifier = "comment_cell"

        return cell
    }
}

extension UITableViewCell {
...
