...

import Foundation
import Combine

enum Filter {
    case all
    case favorite
}

final class ShowPostsViewModel {
    typealias UserId = Int

    private let itemsSubject = PassthroughSubject<[PostItem], Never>()
...
