...
    private let table: UITableView = {
        let table = UITableView(frame: .zero)
        return table
    }()

    private let unitSelector: UISegmentedControl = {
        let segmentedControl = UISegmentedControl(items: ["All", "Favorite"])
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.accessibilityIdentifier = "filter"
        return segmentedControl
    }()

    private let dataSource = PostsTableViewDataSource()
...
